[workspace]
resolver = "2"

members = [
    "arceos-main",

    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs",
    "modules/axhal",
    "modules/axlog",
    "modules/axmm",
    "modules/axdma",
    "modules/axnet",
    "modules/axns",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axuio",
    "modules/axdevice_event",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",

    "compat_layers/axlinux",
    "compat_layers/axlinux/api",
    "compat_layers/axlinux/core",
]

# 添加 exclude 字段，明确排除 apps 目录
exclude = [
    "apps",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" }
axhal = { path = "modules/axhal" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axnet = { path = "modules/axnet" }
axns = { path = "modules/axns" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }

axuio = { path = "modules/axuio" }
axdevice_event = { path = "modules/axdevice_event" }
axlinux = { path = "compat_layers/axlinux" }

# --- 【【【新增：兼容层专属依赖】】】 ---
# 1. Starry-OS 的 Git 依赖
axprocess = { git = "https://github.com/Starry-OS/axprocess.git" }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git", rev = "b5b6089" }

# 2. 第三方库 (crates.io)
axerrno = "0.1"
bitflags = "2.6"
cfg-if = "1.0"
linkme = "0.3.33"
memory_addr = "0.3"
spin = "0.9"
axio = "0.1.1"

# 3. 第三方库 (Git)
shlex = { version = "1.3.0", default-features = false }
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }
linux-raw-sys = { version = "0.9.3", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }

lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"

[profile.release]
lto = true

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
page_table_entry = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }

[patch."https://github.com/oscomp/arceos.git"]
axalloc = { path = "./modules/axalloc" }
axconfig = { path = "./modules/axconfig" }
axdisplay = { path = "./modules/axdisplay" }
axdriver = { path = "./modules/axdriver" }
axfs = { path = "./modules/axfs" }
axhal = { path = "./modules/axhal" }
axlog = { path = "./modules/axlog" }
axmm = { path = "./modules/axmm" }
axnet = { path = "./modules/axnet" }
axns = { path = "./modules/axns" }
axruntime = { path = "./modules/axruntime" }
axsync = { path = "./modules/axsync" }
axtask = { path = "./modules/axtask" }
axdma = { path = "./modules/axdma" }
axuio = { path = "./modules/axuio" }