# arceos-main/Cargo.toml

[package]
name = "arceos-main"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# 明确这是一个二进制文件，入口是 src/main.rs
[[bin]]
name = "arceos-main"
path = "src/main.rs"

[dependencies]
# 只保留应用层和特性总开关的依赖
axlinux = { workspace = true }
axstd = { workspace = true }
axfeat = { workspace = true }
axuio = { workspace = true }
axns = { workspace = true }
axtask = { workspace = true }
axfs_vfs = "0.1"
axfs_devfs = { version = "0.1"}

[features]
# --- 关键的代理特性定义 ---
# 定义 arceos-main 自己的特性，并告诉 Cargo，
# 当这些特性被激活时，去激活 axfeat 依赖的同名特性。
"linux_compat" = ["axfeat/linux_compat"]
"fp_simd" = ["axfeat/fp_simd"]
"linux_normal_mode" = ["axfeat/linux_normal_mode"]