[package]
name = "axfeat"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/axfeat"
documentation = "https://arceos-org.github.io/arceos/axfeat/index.html"

[features]
default = []

# Multicore
smp = ["axhal/smp", "axruntime/smp", "axtask?/smp", "kspin/smp"]

# Floating point/SIMD
fp_simd = ["axhal/fp_simd"]

# Interrupts
irq = ["axhal/irq", "axruntime/irq", "axtask?/irq"]

# Memory
alloc = ["axalloc", "axruntime/alloc"]
alloc-tlsf = ["axalloc/tlsf"]
alloc-slab = ["axalloc/slab"]
alloc-buddy = ["axalloc/buddy"]
page-alloc-64g = ["axalloc/page-alloc-64g"] # up to 64G memory capacity
page-alloc-4g = ["axalloc/page-alloc-4g"] # up to 4G memory capacity
paging = ["alloc", "axhal/paging", "axruntime/paging"]
tls = ["alloc", "axhal/tls", "axruntime/tls", "axtask?/tls"]
dma = ["alloc", "paging"]

# Multi-threading and scheduler
multitask = ["alloc", "axtask/multitask", "axsync/multitask", "axruntime/multitask"]
sched_fifo = ["axtask/sched_fifo"]
sched_rr = ["axtask/sched_rr", "irq"]
sched_cfs = ["axtask/sched_cfs", "irq"]

# File system
fs = ["alloc", "paging", "axdriver/virtio-blk", "dep:axfs", "axruntime/fs"] # TODO: try to remove "paging"
myfs = ["axfs?/myfs"]
lwext4_rs = ["axfs/lwext4_rs"]

# Networking
net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet", "axruntime/net"]

# Display
display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay", "axruntime/display"]

# Real Time Clock (RTC) Driver.
rtc = ["axhal/rtc", "axruntime/rtc"]

# Device drivers
bus-mmio = ["axdriver?/bus-mmio"]
bus-pci = ["axdriver?/bus-pci"]
driver-ramdisk = ["axdriver?/ramdisk", "axfs?/use-ramdisk"]
driver-ixgbe = ["axdriver?/ixgbe"]
driver-fxmac = ["axdriver?/fxmac"] # fxmac ethernet driver for PhytiumPi
driver-bcm2835-sdhci = ["axdriver?/bcm2835-sdhci"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]


# --- 【【【定义一个健壮的 uspace 特性】】】 ---
# 用户空间支持是一个复杂的概念，它依赖于分页、TLS 和 HAL 层的支持。
# 我们把这些依赖都封装在这里。
uspace = ["paging", "tls", "axhal/uspace"]

linux_compat = [
    "paging", "uspace", "irq", "multitask", "fs", "net",
    "axns/thread-local", # <--- 确保启用
    "axlinux", "axlinux/task", "axlinux/fs", "axlinux/net"
]

# --- 【【【新增：为 normal 模式添加一个特性】】】 ---
# 这个特性用于在非测试场景下，启用 axlinux 的基本模式。
linux_normal_mode = [
    "paging",
    "irq",              # 兼容层需要中断和定时器支持
    "multitask",        # 兼容层需要多任务支持
    "axns/thread-local",# 兼容层需要线程局部命名空间
    "axlinux",          # 确保 axlinux 库本身被启用
    "axlinux/normal_mode" # 启用 axlinux 内部的 `normal_mode` 特性
]

[dependencies]
axruntime = { workspace = true }
axhal = { workspace = true }
axlog = { workspace = true }
axalloc = { workspace = true, optional = true }
axdriver = { workspace = true, optional = true }
axfs = { workspace = true, optional = true }
axnet = { workspace = true, optional = true }
axdisplay = { workspace = true, optional = true }
axsync = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
kspin = { version = "0.1", optional = true }
axlinux = { workspace = true, optional = true }
axns = { workspace = true, optional = true }