[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>", "Yuekai Jia <equation618@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
bitflags = "2.5" 
linux-raw-sys = { version = "0.9.3", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }

